<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="sell">Sell</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="negative_values">Quantity can\'t be negative!</string>
    <string name="add_item">Add item</string>
    <string name="error_creating_image_file">Error creating image file.</string>
    <string name="empty_fields_message">One or more fields are empty.</string>
    <string name="error_validating">Error validating input.</string>
    <string name="error_inserting">Error, error inserting</string>
    <string name="item_saved">item saved</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="order_from_supplier">Order From Supplier</string>
    <string name="item_name">Item name</string>
    <string name="enter_supplier_name">Enter supplier name</string>
    <string name="add_image">add image</string>
</resources>
